prod/node-express-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-express-app
  namespace: prod
  labels:
    app: node-express-app
  annotations:
    fluxcd.io/automated: 'true'
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-express-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: node-express-app
    spec:
      containers:
      - name: node-express-app
        image: allclasspenguin/node-express-app:dev-00028
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
