prod/node-express-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-express-app
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b16fe0bc-14b4-11ea-8d44-025000000001
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-express-app-primary
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: node-express-app-primary
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b16fe0bc-14b4-11ea-8d44-025000000001
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-express-app-primary
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: node-express-app-canary
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b16fe0bc-14b4-11ea-8d44-025000000001
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: node-express-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
