prod/node-express-app/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: node-express-app-primary
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b16fe0bc-14b4-11ea-8d44-025000000001
spec:
  host: node-express-app-primary
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: "2019-12-02T03:34:49Z"
  generation: 1
  name: node-express-app-canary
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b16fe0bc-14b4-11ea-8d44-025000000001
spec:
  host: node-express-app-canary
  trafficPolicy:
    tls:
      mode: DISABLE
