prod/node-express-app/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-express-app
  namespace: prod
  ownerReferences:
  - apiVersion: flagger.app/v1alpha3
    blockOwnerDeletion: true
    controller: true
    kind: Canary
    name: node-express-app
    uid: b174967f-14b4-11ea-8d44-025000000001
spec:
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /node-express-app
    route:
    - destination:
        host: node-express-app-primary
      weight: 100
    - destination:
        host: node-express-app-canary
      weight: 0
